[gd_scene load_steps=12 format=3 uid="uid://06sjdfaoiwvt"]

[ext_resource type="Theme" uid="uid://ditffwdpwhqsc" path="res://assets/scenes/system/window.tres" id="1_7ma78"]
[ext_resource type="Texture2D" uid="uid://dfixd40uuugnd" path="res://assets/gfx/ui/window.png" id="1_ywt05"]
[ext_resource type="Texture2D" uid="uid://caywscxjxtuhn" path="res://assets/gfx/contArrow.png" id="2_1lium"]
[ext_resource type="Script" uid="uid://ddq4cuxf30f0q" path="res://assets/scenes/system/windowSys.gd" id="3_m08t8"]
[ext_resource type="AudioStream" uid="uid://b3lyujqk4ojcd" path="res://assets/snd/select.wav" id="5_m08t8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n5rqp"]
atlas = ExtResource("2_1lium")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs482"]
atlas = ExtResource("2_1lium")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_cxd00"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5rqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs482")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="Animation" id="Animation_8a1vb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("text:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_m08t8"]
resource_name = "tween"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("text:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1bcue"]
_data = {
&"RESET": SubResource("Animation_8a1vb"),
&"tween": SubResource("Animation_m08t8")
}

[node name="window" type="NinePatchRect"]
clip_contents = true
anchors_preset = -1
anchor_right = 0.6
anchor_bottom = 0.18300001
offset_bottom = 0.15999603
size_flags_horizontal = 4
theme = ExtResource("1_7ma78")
texture = ExtResource("1_ywt05")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
script = ExtResource("3_m08t8")

[node name="text" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7ma78")
bbcode_enabled = true
text = "The fast brown fox jumps over the lazy dog."
scroll_active = false
scroll_following = true
scroll_following_visible_characters = true
shortcut_keys_enabled = false
visible_characters = 0
visible_ratio = 0.0

[node name="continueIcon" type="AnimatedSprite2D" parent="."]
position = Vector2(368, 72)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_cxd00")
frame_progress = 0.37914342

[node name="continueSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_m08t8")
volume_db = -80.0

[node name="animationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1bcue")
}
